--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -8,21 +8,44 @@
 </head>
 <body>
     <div class="container">
+        <h1 class="title">PLS TAKE CARE OF YOURSELF <span>&#10084;&#65039;</span></h1>
         <p>Please pick a flower:</p>
         <div class="flower-selection">
-            <!-- Flower buttons here -->
+            <div class="flower-button" onclick="selectFlower('rose')">
+                <img src="images/rose.jpeg" alt="Rose">
+                <p>Rose</p>
+            </div>
+            <div class="flower-button" onclick="selectFlower('tulip')">
+                <img src="images/tulip.jpeg" alt="Tulip">
+                <p>Tulip</p>
+            </div>
+            <div class="flower-button" onclick="selectFlower('lavender')">
+                <img src="images/lavender.jpeg" alt="Lavender">
+                <p>Lavender</p>
+            </div>
         </div>
         <div id="emotion-section" style="display: none;">
-            <!-- Emotion buttons here -->
+            <p>How are you feeling?</p>
+            <div class="emotion-button" onclick="selectEmotion('angry')">
+                <span>&#128545;</span>
+                <p>Angry</p>
+            </div>
+            <div class="emotion-button" onclick="selectEmotion('sad')">
+                <span>&#128546;</span>
+                <p>Sad</p>
+            </div>
+            <div class="emotion-button" onclick="selectEmotion('lonely')">
+                <span>&#128550;</span>
+                <p>Lonely</p>
+            </div>
+            <div class="emotion-button" onclick="selectEmotion('happy')">
+                <span>&#128512;</span>
+                <p>Happy</p>
+            </div>
         </div>
         <div id="result-section" style="display: none;">
             <img id="selected-flower" src="" alt="Selected Flower">
             <p id="quote"></p>
-            <!-- Images here -->
-            <img class="cute-pic top-left" src="cute-pic1.jpeg" alt="Cute Pic 1">
-            <img class="cute-pic top-right" src="cute-pic2.jpeg" alt="Cute Pic 2">
-            <img class="cute-pic bottom-left" src="cute-pic3.jpeg" alt="Cute Pic 3">
-            <img class="cute-pic bottom-right" src="cute-pic4.jpeg" alt="Cute Pic 4">
         </div>
     </div>
     <script src="scripts.js"></script>
