--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST WEB</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Your CSS styles here */
+    </style>
 </head>
 <body>
     <div class="container">
