--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -12,16 +12,13 @@
         <p>Please pick a flower:</p>
         <div class="flower-selection">
             <button class="flower-button" onclick="selectFlower('rose')">
-                <img src="images/rose.jpeg" alt="Rose">
-                <p>Rose</p>
+                Rose
             </button>
             <button class="flower-button" onclick="selectFlower('tulip')">
-                <img src="images/tulip.jpeg" alt="Tulip">
-                <p>Tulip</p>
+                Tulip
             </button>
             <button class="flower-button" onclick="selectFlower('lavender')">
-                <img src="images/lavender.jpeg" alt="Lavender">
-                <p>Lavender</p>
+                Lavender
             </button>
         </div>
         <div id="emotion-section" style="display: none;">
