--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -31,11 +31,11 @@
         <div id="result-section" style="display: none;">
             <img id="selected-flower" src="" alt="Selected Flower">
             <p id="quote"></p>
+            <div class="design-images">
+                <img class="cute-pic" src="cute-pic1.jpeg" alt="Cute Pic 1">
+                <img class="cute-pic" src="cute-pic4.jpeg" alt="Cute Pic 4">
+            </div>
         </div>
-    </div>
-    <div class="design-images">
-        <img class="cute-pic top-left" src="cute-pic1.jpeg" alt="Cute Pic 1">
-        <img class="cute-pic bottom-right" src="cute-pic4.jpeg" alt="Cute Pic 4">
     </div>
     <script src="scripts.js"></script>
 </body>
