--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -12,15 +12,15 @@
         <p>Please pick a flower:</p>
         <div class="flower-selection">
             <button class="flower-button" onclick="selectFlower('rose')">
-                <img src="rose.jpeg" alt="Rose">
+                <img src="rose.jpeg" alt="Rose" class="flower-image">
                 Rose
             </button>
             <button class="flower-button" onclick="selectFlower('tulip')">
-                <img src="tulip.jpeg" alt="Tulip">
+                <img src="tulip.jpeg" alt="Tulip" class="flower-image">
                 Tulip
             </button>
             <button class="flower-button" onclick="selectFlower('lavender')">
-                <img src="lavender.jpeg" alt="Lavender">
+                <img src="lavender.jpeg" alt="Lavender" class="flower-image">
                 Lavender
             </button>
         </div>
@@ -35,8 +35,8 @@
             <img id="selected-flower" src="" alt="Selected Flower">
             <p id="quote"></p>
             <div class="design-images">
-                <img class="cute-pic cute-pic1" src="cute-pic1.jpeg" alt="Cute Pic 1">
-                <img class="cute-pic cute-pic4" src="cute-pic4.jpeg" alt="Cute Pic 4">
+                <img class="cute-pic" src="cute-pic1.jpeg" alt="Cute Pic 1">
+                <img class="cute-pic" src="cute-pic4.jpeg" alt="Cute Pic 4">
             </div>
         </div>
     </div>
