--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -8,36 +8,44 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">PLS TAKE CARE OF YOURSELF <span class="heart">&#10084;</span></h1>
+        <h1 class="title">PLS TAKE CARE OF YOURSELF <span>&#10084;&#65039;</span></h1>
         <p>Please pick a flower:</p>
         <div class="flower-selection">
-            <button class="flower-button" onclick="selectFlower('rose')">
-                <img src="rose.jpeg" alt="Rose" class="flower-image">
-                Rose
-            </button>
-            <button class="flower-button" onclick="selectFlower('tulip')">
-                <img src="tulip.jpeg" alt="Tulip" class="flower-image">
-                Tulip
-            </button>
-            <button class="flower-button" onclick="selectFlower('lavender')">
-                <img src="lavender.jpeg" alt="Lavender" class="flower-image">
-                Lavender
-            </button>
+            <div class="flower-button" onclick="selectFlower('rose')">
+                <img src="images/rose.jpeg" alt="Rose">
+                <p>Rose</p>
+            </div>
+            <div class="flower-button" onclick="selectFlower('tulip')">
+                <img src="images/tulip.jpeg" alt="Tulip">
+                <p>Tulip</p>
+            </div>
+            <div class="flower-button" onclick="selectFlower('lavender')">
+                <img src="images/lavender.jpeg" alt="Lavender">
+                <p>Lavender</p>
+            </div>
         </div>
         <div id="emotion-section" style="display: none;">
             <p>How are you feeling?</p>
-            <button class="emotion-button" onclick="selectEmotion('angry')">Angry</button>
-            <button class="emotion-button" onclick="selectEmotion('sad')">Sad</button>
-            <button class="emotion-button" onclick="selectEmotion('lonely')">Lonely</button>
-            <button class="emotion-button" onclick="selectEmotion('happy')">Happy</button>
+            <div class="emotion-button" onclick="selectEmotion('angry')">
+                <span>&#128545;</span>
+                <p>Angry</p>
+            </div>
+            <div class="emotion-button" onclick="selectEmotion('sad')">
+                <span>&#128546;</span>
+                <p>Sad</p>
+            </div>
+            <div class="emotion-button" onclick="selectEmotion('lonely')">
+                <span>&#128550;</span>
+                <p>Lonely</p>
+            </div>
+            <div class="emotion-button" onclick="selectEmotion('happy')">
+                <span>&#128512;</span>
+                <p>Happy</p>
+            </div>
         </div>
         <div id="result-section" style="display: none;">
             <img id="selected-flower" src="" alt="Selected Flower">
             <p id="quote"></p>
-            <div class="design-images">
-                <img class="cute-pic" src="cute-pic1.jpeg" alt="Cute Pic 1">
-                <img class="cute-pic" src="cute-pic4.jpeg" alt="Cute Pic 4">
-            </div>
         </div>
     </div>
     <script src="scripts.js"></script>
