--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -24,6 +24,10 @@
                 <p>Lavender</p>
             </div>
         </div>
+        <div class="cute-pics">
+            <img src="cute-pic1.jpeg" alt="Cute Pic 1">
+            <img src="cute-pic4.jpeg" alt="Cute Pic 4">
+        </div>
         <div id="emotion-section" style="display: none;">
             <p>How are you feeling?</p>
             <div class="emotion-button" onclick="selectEmotion('angry')">
