--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -5,26 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST WEB</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .container {
-            position: relative;
-        }
-
-        .cute-pics {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-        }
-
-        .cute-pics img {
-            max-width: 50px;
-            height: auto;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -67,11 +47,11 @@
             <img id="selected-flower" src="" alt="Selected Flower">
             <p id="quote"></p>
         </div>
-        <div class="cute-pics">
-            <img src="cute-pic1.jpeg" alt="Cute Pic 1">
-            <img src="cute-pic4.jpeg" alt="Cute Pic 4">
-        </div>
     </div>
     <script src="scripts.js"></script>
+    <div class="design-images">
+        <img class="cute-pic" src="cute-pic1.jpeg" alt="Cute Pic 1">
+        <img class="cute-pic" src="cute-pic4.jpeg" alt="Cute Pic 4">
+    </div>
 </body>
 </html>
