--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -46,12 +46,12 @@
         <div id="result-section" style="display: none;">
             <img id="selected-flower" src="" alt="Selected Flower">
             <p id="quote"></p>
+            <div class="design-images">
+                <img class="cute-pic" src="images/cute-pic-1.jpg" alt="Cute Pic 1">
+                <img class="cute-pic" src="images/cute-pic-2.jpg" alt="Cute Pic 2">
+            </div>
         </div>
     </div>
     <script src="scripts.js"></script>
-    <div class="design-images">
-        <img class="cute-pic" src="cute-pic1.jpeg" alt="Cute Pic 1">
-        <img class="cute-pic" src="cute-pic4.jpeg" alt="Cute Pic 4">
-    </div>
 </body>
 </html>
