--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -47,8 +47,8 @@
             <img id="selected-flower" src="" alt="Selected Flower">
             <p id="quote"></p>
             <div class="design-images">
-                <img class="cute-pic" src="images/cute-pic-1.jpg" alt="Cute Pic 1">
-                <img class="cute-pic" src="images/cute-pic-4.jpg" alt="Cute Pic 4">
+                <img class="cute-pic" src="cute-pic-1.jpg" alt="Cute Pic 1">
+                <img class="cute-pic" src="cute-pic-4.jpg" alt="Cute Pic 4">
             </div>
         </div>
     </div>
