--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEST WEB</title>
+    <title>TEST WEBSITE</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -56,59 +55,3 @@
     <script src="scripts.js"></script>
 </body>
 </html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEST WEB</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <p>Please pick a flower:</p>
-        <div class="flower-selection">
-            <div class="flower-button" onclick="selectFlower('rose')">
-                <img src="images/rose.jpeg" alt="Rose">
-                <p>Rose</p>
-            </div>
-            <div class="flower-button" onclick="selectFlower('tulip')">
-                <img src="images/tulip.jpeg" alt="Tulip">
-                <p>Tulip</p>
-            </div>
-            <div class="flower-button" onclick="selectFlower('lavender')">
-                <img src="images/lavender.jpeg" alt="Lavender">
-                <p>Lavender</p>
-            </div>
-        </div>
-        <div id="emotion-section" style="display: none;">
-            <p>How are you feeling?</p>
-            <div class="emotion-button" onclick="selectEmotion('angry')">
-                <span>&#128545;</span>
-                <p>Angry</p>
-            </div>
-            <div class="emotion-button" onclick="selectEmotion('sad')">
-                <span>&#128546;</span>
-                <p>Sad</p>
-            </div>
-            <div class="emotion-button" onclick="selectEmotion('lonely')">
-                <span>&#128550;</span>
-                <p>Lonely</p>
-            </div>
-            <div class="emotion-button" onclick="selectEmotion('happy')">
-                <span>&#128512;</span>
-                <p>Happy</p>
-            </div>
-        </div>
-        <div id="result-section" style="display: none;">
-            <img id="selected-flower" src="" alt="Selected Flower">
-            <p id="quote"></p>
-            <div class="design-images">
-                <img class="cute-pic" src="cute-pic-1.jpg" alt="Cute Pic 1">
-                <img class="cute-pic" src="cute-pic-4.jpg" alt="Cute Pic 4">
-            </div>
-        </div>
-    </div>
-    <script src="scripts.js"></script>
-</body>
-</html>
-
