--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -48,6 +48,8 @@
             <p id="quote"></p>
             <div class="design-images">
                 <img class="cute-pic" src="cute-pic-1.jpg" alt="Cute Pic 1">
+                <img class="cute-pic" src="cute-pic-2.jpg" alt="Cute Pic 2">
+                <img class="cute-pic" src="cute-pic-3.jpg" alt="Cute Pic 3">
                 <img class="cute-pic" src="cute-pic-4.jpg" alt="Cute Pic 4">
             </div>
         </div>
