--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -44,7 +44,7 @@
         </div>
         <div id="result-section" style="display: none;">
             <h1 class="title">PLS TAKE CARE OF YOURSELF <span>&#10084;&#65039;</span></h1>
-            <img id="selected-flower" src="" alt="Selected Flower">
+            <img id="result-image" src="" alt="Result Flower">
             <p id="quote"></p>
             <div class="design-images">
                 <img class="cute-pic" src="cute-pic-1.jpg" alt="Cute Pic 1">
