--- a/TEST WEBSITE/index.html
+++ b/TEST WEBSITE/index.html
@@ -11,15 +11,15 @@
         <p>Please pick a flower:</p>
         <div class="flower-selection">
             <div class="flower-button" onclick="selectFlower('rose')">
-                <img src="images/rose.jpeg" alt="Rose">
+                <img src="images/rose.jpg" alt="Rose">
                 <p>Rose</p>
             </div>
             <div class="flower-button" onclick="selectFlower('tulip')">
-                <img src="images/tulip.jpeg" alt="Tulip">
+                <img src="images/tulip.jpg" alt="Tulip">
                 <p>Tulip</p>
             </div>
             <div class="flower-button" onclick="selectFlower('lavender')">
-                <img src="images/lavender.jpeg" alt="Lavender">
+                <img src="images/lavender.jpg" alt="Lavender">
                 <p>Lavender</p>
             </div>
         </div>
